--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-ui-datepicker": "^1.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
